second-factor.html 美化和js校验
Signed-off-by: wuqingjian <wuqingjiancpp@qq.com>